# waybar_amdfan

./: README.md  pyproject.toml  waybar_amdfan.py  waybar_amdfan.sh  waybar_amdfan2.sh
